<resources>
    <string name="app_name">Squads</string>
    <!--navigation string resources-->
    <string name="navigation_home">Home</string>
    <string name="navigation_reservation">Reservations</string>
    <string name="navigation_exercises">Exercises</string>
    <string name="navigation_health">Health</string>
    <string name="navigation_settings">Settings</string>
    <!--fragment home string resources-->
    <string name="greeting_text">Hello\nUsername!</string>
    <string name="information_text">Right now is the perfect time to get fit!\nCome join one of ou training-sessions</string>
    <string name="book_btn">book</string>
    <string name="home_image_alt">Men</string>
    <string name="logo_image_alt">Logo</string>
    <!--fragment reservations string resources-->
    <string name="reservations_text">Reservations</string>
    <string name="book_text">Book</string>
    <string name="planned_text">planned</string>
    <string name="past_text">past</string>
    <!--mock data for planned reservation fragment (tab)-->
    <string name="monday_mock_text">Monday 03/10</string>
    <string name="workout_type_mock_text">Heavy workout</string>
    <string name="hour_mock_text">19:00 – 20:00</string>
    <string name="trainer_mock_text">Beast mode</string>
    <!--past reservations-->
    <string name="week_btn">week</string>
    <string name="month_btn">month</string>
    <string name="year_btn">year</string>
    <string name="all_btn">all</string>
    <string name="date_mock_text">02/09/2022</string>
    <!--reservation tabs-->
    <string name="past_res_text">Planned</string>
    <string name="planned_res_text">Past</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_session_lbl">Book a session</string>
    <string name="nameOfTrainer">with Hells</string>
    <string name="spotsleft">6 spots left</string>
    <!--strings for mylistsession-->
    <string name="workoutnametrainer_text">With %s</string>
    <string name="spotslef_text">%s spots left</string>
    <string name="workoutdate_text">%s - %s</string>
    <string name="exercises">Exercises</string>

    <string name="past_reservation_text">%d/%d/%d</string>

</resources>