<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/gradiant_button"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"



            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workout_type_mock_text"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/workout_date_text"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/workout_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_mock_text"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/trainer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trainer_mock_text"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/cancel_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cancel"
                app:layout_constraintBottom_toTopOf="@+id/trainer_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</layout>
